@@ -691,49 +691,198 @@ out of memory or process/resource limits reached”
 [1] 关于虚拟机线程实现方面的内容可以参考本书第12章
 
 ###### 2.4.3 方法区和运行时常量池溢出
+由于运行时常量池是方法区的一部分，所以这两个区域的溢出测试可以放到一起进行。前面曾经
+提到HotSpot从JDK 7开始逐步“去永久代”的计划，并在JDK 8中完全使用元空间来代替永久代的背景
+故事，在此我们就以测试代码来观察一下，使用“永久代”还是“元空间”来实现方法区，对程序有什么
+实际的影响
 
+String::intern()是一个本地方法，它的作用是如果字符串常量池中已经包含一个等于此String对象的
+字符串，则返回代表池中这个字符串的String对象的引用；否则，会将此String对象包含的字符串添加
+到常量池中，并且返回此String对象的引用。在JDK 6或更早之前的HotSpot虚拟机中，常量池都是分配
+在永久代中，我们可以通过-XX：PermSize和-XX：MaxPermSize限制永久代的大小，即可间接限制其
+中常量池的容量，具体实现如代码清单2-7所示，请读者测试时首先以JDK 6来运行代码
+```java
+//代码清单2-7 运行时常量池导致的内存溢出异常
+/**
+ * VM Args：-XX:PermSize=6M -XX:MaxPermSize=6M
+ * @author zzm
+ */
+public class RuntimeConstantPoolOOM {
+    public static void main(String[] args) {
+        // 使用Set保持着常量池引用，避免Full GC回收常量池行为
+        Set<String> set = new HashSet<String>();
+        // 在short范围内足以让6MB的PermSize产生OOM了
+        short i = 0;
+        while (true) {
+            set.add(String.valueOf(i++).intern());
+        }
+    }
+}
 
+//运行结果：
+Exception in thread "main" java.lang.OutOfMemoryError: PermGen space
+    at java.lang.String.intern(Native Method)
+    at org.fenixsoft.oom.RuntimeConstantPoolOOM.main(RuntimeConstantPoolOOM.java: 18)
+```
+从运行结果中可以看到，运行时常量池溢出时，在OutOfMemoryError异常后面跟随的提示信息
+是“PermGen space”，说明运行时常量池的确是属于方法区（即JDK 6的HotSpot虚拟机中的永久代）的
+一部分
 
+而使用JDK 7或更高版本的JDK来运行这段程序并不会得到相同的结果，无论是在JDK 7中继续使
+用-XX：MaxPermSize参数或者在JDK 8及以上版本使用-XX：MaxMeta-spaceSize参数把方法区容量同
+样限制在6MB，也都不会重现JDK 6中的溢出异常，循环将一直进行下去，永不停歇<sup>[1]</sup>。出现这种变
+化，是因为自JDK 7起，原本存放在永久代的字符串常量池被移至Java堆之中，所以在JDK 7及以上版
+本，限制方法区的容量对该测试用例来说是毫无意义的。这时候使用-Xmx参数限制最大堆到6MB就能
+够看到以下两种运行结果之一，具体取决于哪里的对象分配时产生了溢出：
+```text
+// OOM异常一：
+Exception in thread "main" java.lang.OutOfMemoryError: Java heap space
+    at java.base/java.lang.Integer.toString(Integer.java:440)
+    at java.base/java.lang.String.valueOf(String.java:3058)
+    at RuntimeConstantPoolOOM.main(RuntimeConstantPoolOOM.java:12)
+    
+// OOM异常二：
+Exception in thread "main" java.lang.OutOfMemoryError: Java heap space
+    at java.base/java.util.HashMap.resize(HashMap.java:699)
+    at java.base/java.util.HashMap.putVal(HashMap.java:658)
+    at java.base/java.util.HashMap.put(HashMap.java:607)
+    at java.base/java.util.HashSet.add(HashSet.java:220)
+    at RuntimeConstantPoolOOM.main(RuntimeConstantPoolOOM.java from InputFile-Object:14)
+```
+关于这个字符串常量池的实现在哪里出现问题，还可以引申出一些更有意思的影响，具体见代码
+清单2-8所示
+```java
+//代码清单2-8 String.intern()返回引用的测试
+public class RuntimeConstantPoolOOM {
+    public static void main(String[] args) {
+        String str1 = new StringBuilder("计算机").append("软件").toString();
+        System.out.println(str1.intern() == str1);
+        String str2 = new StringBuilder("ja").append("va").toString();
+        System.out.println(str2.intern() == str2);
+    }
+}
+```
+这段代码在JDK 6中运行，会得到两个false，而在JDK 7中运行，会得到一个true和一个false。产
+生差异的原因是，在JDK 6中，intern()方法会把首次遇到的字符串实例复制到永久代的字符串常量池
+中存储，返回的也是永久代里面这个字符串实例的引用，而由StringBuilder创建的字符串对象实例在
+Java堆上，所以必然不可能是同一个引用，结果将返回false
 
+而JDK 7（以及部分其他虚拟机，例如JRockit）的intern()方法实现就不需要再拷贝字符串的实例
+到永久代了，既然字符串常量池已经移到Java堆中，那只需要在常量池里记录一下首次出现的实例引
+用即可，因此intern()返回的引用和由StringBuilder创建的那个字符串实例就是同一个。而对str2比较返
+回false，这是因为“java”<sup>[2]</sup>这个字符串在执行String-Builder.toString()之前就已经出现过了，字符串常量
+池中已经有它的引用，不符合intern()方法要求“首次遇到”的原则，“计算机软件”这个字符串则是首次
+出现的，因此结果返回true
 
+我们再来看看方法区的其他部分的内容，方法区的主要职责是用于存放类型的相关信息，如类
+名、访问修饰符、常量池、字段描述、方法描述等。对于这部分区域的测试，基本的思路是运行时产
+生大量的类去填满方法区，直到溢出为止。虽然直接使用Java SE API也可以动态产生类（如反射时的
+GeneratedConstructorAccessor和动态代理等），但在本次实验中操作起来比较麻烦。在代码清单2-8里
+笔者借助了CGLib<sup>[3]</sup>直接操作字节码运行时生成了大量的动态类
 
+值得特别注意的是，我们在这个例子中模拟的场景并非纯粹是一个实验，类似这样的代码确实可
+能会出现在实际应用中：当前的很多主流框架，如Spring、Hibernate对类进行增强时，都会使用到
+CGLib这类字节码技术，当增强的类越多，就需要越大的方法区以保证动态生成的新类型可以载入内
+存。另外，很多运行于Java虚拟机上的动态语言（例如Groovy等）通常都会持续创建新类型来支撑语
+言的动态性，随着这类动态语言的流行，与代码清单2-9相似的溢出场景也越来越容易遇到
+```java
+//代码清单2-9 借助CGLib使得方法区出现内存溢出异常
+/**
+ * VM Args：-XX:PermSize=10M -XX:MaxPermSize=10M
+ * @author zzm
+ */
+public class JavaMethodAreaOOM {
+    public static void main(String[] args) {
+        while (true) {
+            Enhancer enhancer = new Enhancer();
+            enhancer.setSuperclass(OOMObject.class);
+            enhancer.setUseCache(false);
+            enhancer.setCallback(new MethodInterceptor() {
+                public Object intercept(Object obj, Method method, Object[] args, MethodProxy proxy) throws Throwable {
+                    return proxy.invokeSuper(obj, args);
+                }
+            });
+            enhancer.create();
+        }
+    }
+    static class OOMObject {
+    }
+}
 
+//在JDK 7中的运行结果：
+Caused by: java.lang.OutOfMemoryError: PermGen space
+    at java.lang.ClassLoader.defineClass1(Native Method)
+    at java.lang.ClassLoader.defineClassCond(ClassLoader.java:632)
+    at java.lang.ClassLoader.defineClass(ClassLoader.java:616)
+    ... 8 more
+```
+方法区溢出也是一种常见的内存溢出异常，一个类如果要被垃圾收集器回收，要达成的条件是比
+较苛刻的。在经常运行时生成大量动态类的应用场景里，就应该特别关注这些类的回收状况。这类场
+景除了之前提到的程序使用了CGLib字节码增强和动态语言外，常见的还有：大量JSP或动态产生JSP
+文件的应用（JSP第一次运行时需要编译为Java类）、基于OSGi的应用（即使是同一个类文件，被不同
+的加载器加载也会视为不同的类）等
 
+在JDK 8以后，永久代便完全退出了历史舞台，元空间作为其替代者登场。在默认设置下，前面
+列举的那些正常的动态创建新类型的测试用例已经很难再迫使虚拟机产生方法区的溢出异常了。不过
+为了让使用者有预防实际应用里出现类似于代码清单2-9那样的破坏性的操作，HotSpot还是提供了一
+些参数作为元空间的防御措施，主要包括：
 
+·-XX：MaxMetaspaceSize：设置元空间最大值，默认是-1，即不限制，或者说只受限于本地内存
+大小
 
+·-XX：MetaspaceSize：指定元空间的初始空间大小，以字节为单位，达到该值就会触发垃圾收集
+进行类型卸载，同时收集器会对该值进行调整：如果释放了大量的空间，就适当降低该值；如果释放
+了很少的空间，那么在不超过-XX：MaxMetaspaceSize（如果设置了的话）的情况下，适当提高该值
 
+·-XX：MinMetaspaceFreeRatio：作用是在垃圾收集之后控制最小的元空间剩余容量的百分比，可
+减少因为元空间不足导致的垃圾收集的频率。类似的还有-XX：Max-MetaspaceFreeRatio，用于控制最
+大的元空间剩余容量的百分比
 
+[1] 正常情况下是永不停歇的，如果机器内存紧张到连几MB的Java堆都挤不出来的这种极端情况就不
+讨论了
 
+[2] 它是在加载sun.misc.Version这个类的时候进入常量池的。本书第2版并未解释java这个字符串此前是
+哪里出现的，所以被批评“挖坑不填了”（无奈地摊手）。如读者感兴趣是如何找出来的，可参考RednaxelaFX的知乎回答（https://www.zhihu.com/question/51102308/answer/124441115）
 
-
-
-
+[3] CGLib开源项目：http://cglib.sourceforge.net/
 
 ###### 2.4.4 本机直接内存溢出
+直接内存（Direct Memory）的容量大小可通过-XX：MaxDirectMemorySize参数来指定，如果不
+去指定，则默认与Java堆最大值（由-Xmx指定）一致，代码清单2-10越过了DirectByteBuffer类直接通
+过反射获取Unsafe实例进行内存分配（Unsafe类的getUnsafe()方法指定只有引导类加载器才会返回实
+例，体现了设计者希望只有虚拟机标准类库里面的类才能使用Unsafe的功能，在JDK 10时才将Unsafe
+的部分功能通过VarHandle开放给外部使用），因为虽然使用DirectByteBuffer分配内存也会抛出内存溢
+出异常，但它抛出异常时并没有真正向操作系统申请分配内存，而是通过计算得知内存无法分配就会
+在代码里手动抛出溢出异常，真正申请分配内存的方法是Unsafe::allocateMemory()
+```java
+//代码清单2-10 使用unsafe分配本机内存
+/**
+ * VM Args：-Xmx20M -XX:MaxDirectMemorySize=10M
+ * @author zzm
+ */
+public class DirectMemoryOOM {
+    private static final int _1MB = 1024 * 1024;
+    public static void main(String[] args) throws Exception {
+        Field unsafeField = Unsafe.class.getDeclaredFields()[0];
+        unsafeField.setAccessible(true);
+        Unsafe unsafe = (Unsafe) unsafeField.get(null);
+        while (true) {
+            unsafe.allocateMemory(_1MB);
+        }
+    }
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
+//运行结果：
+Exception in thread "main" java.lang.OutOfMemoryError
+    at sun.misc.Unsafe.allocateMemory(Native Method)
+    at org.fenixsoft.oom.DMOOM.main(DMOOM.java:20)
+```
+由直接内存导致的内存溢出，一个明显的特征是在Heap Dump文件中不会看见有什么明显的异常
+情况，如果读者发现内存溢出之后产生的Dump文件很小，而程序中又直接或间接使用了
+DirectMemory（典型的间接使用就是NIO），那就可以考虑重点检查一下直接内存方面的原因了
 
 ##### 2.5 本章小结
-
-
-
-
-
-
-
-
-
-
-
-
+到此为止，我们明白了虚拟机里面的内存是如何划分的，哪部分区域、什么样的代码和操作可能
+导致内存溢出异常。虽然Java有垃圾收集机制，但内存溢出异常离我们并不遥远，本章只是讲解了各
+个区域出现内存溢出异常的原因，下一章将详细讲解Java垃圾收集机制为了避免出现内存溢出异常都
+做了哪些努力
